// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assessment Converter oboToSlate converts an OboComponent to a Slate node with no unableToPassResult 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {
    "failedResult": "no_score",
    "failedType": "set-value",
    "mods": Array [],
    "passedResult": 100,
    "passedType": "$attempt_score",
    "passingAttemptScore": 0,
    "unableToPassResult": 0,
    "unableToPassType": "no-value",
  },
  "type": "ObojoboDraft.Sections.Assessment.Rubric",
}
`;

exports[`Assessment Converter oboToSlate converts an OboComponent to a Slate node with no unableToPassResult 2`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {
    "failedResult": "no_score",
    "failedType": "set-value",
    "mods": Array [],
    "passedResult": 100,
    "passedType": "$attempt_score",
    "passingAttemptScore": 0,
    "unableToPassResult": 0,
    "unableToPassType": "no-value",
  },
  "type": "ObojoboDraft.Sections.Assessment.Rubric",
}
`;

exports[`Assessment Converter oboToSlate converts an OboComponent to a Slate node with no-scores 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {
    "failedResult": 0,
    "failedType": "no-score",
    "mods": Array [],
    "passedResult": 100,
    "passedType": "$attempt_score",
    "passingAttemptScore": 0,
    "unableToPassResult": 0,
    "unableToPassType": "no-score",
  },
  "type": "ObojoboDraft.Sections.Assessment.Rubric",
}
`;

exports[`Assessment Converter oboToSlate converts an OboComponent to a Slate node with numerical values 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {
    "failedResult": 100,
    "failedType": "set-value",
    "mods": Array [],
    "passedResult": 100,
    "passedType": "set-value",
    "passingAttemptScore": 0,
    "unableToPassResult": 100,
    "unableToPassType": "set-value",
  },
  "type": "ObojoboDraft.Sections.Assessment.Rubric",
}
`;

exports[`Assessment Converter oboToSlate converts an OboComponent to a Slate node with special types 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "content": Object {
    "failedResult": 0,
    "failedType": "$attempt_score",
    "mods": Array [],
    "passedResult": 100,
    "passedType": "$attempt_score",
    "passingAttemptScore": 0,
    "unableToPassResult": 0,
    "unableToPassType": "$highest_attempt_score",
  },
  "type": "ObojoboDraft.Sections.Assessment.Rubric",
}
`;
